# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plunetapi"
version = "0.1.0"
description = "Thin wrapper for the Plunet SOAP API."
readme = "README.md"
authors = [{ name = "Henrik Kühnemann", email = "hello@yellownape.se" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["plunet", "api", "translation", "localization", "tms"]
dependencies = [
    "zeep >= 4.1.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/kuhnemann/plunet-api"


[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]

"src/plunet-api/__init__.py" = ["{version}"]

